# DualCamQt

./: CMakeLists.txt  MainWindow.cpp  MainWindow.h  README.md  capture_backend.h  main.cpp
